Grammar_v2.txt
<General>       ::= <Statement>*
<Statement>     ::= <If>
                | <While>
                | <Print> ";"
                | <Scan> ";"
                | <Assignment> ";"

<If>            ::= "block" "(" <Condition> ")" "{" <Statement>* "}"
<While>         ::= "rally" "(" <Condition> ")" "{" <Statement>* "}"
<Print>         ::= "serve" "(" <Expression> ")"
<Scan>          ::= "receive" "(" <Var> ")"
<Assignment>    ::= <Var> "=" <Expression>

<Condition>     ::= <Expression> <ComparisonOp> <Expression>
<Expression>    ::= <Term> (("+" | "-") <Term>)*
<Term>          ::= <Factor> (("*" | "/") <Factor>)*
<Factor>        ::= <Number>
                | <Var>
                | "(" <Expression> ")"

<ComparisonOp>  ::= "scores_equal"
                 | "scores_diff"
                 | "leading"
                 | "losing"
                 | "not_behind"
                 | "not_losing"

<Var>           ::= "player_" <ID>
<ID>            ::= [0-9]*
<Number>        ::= [0-9]*
